--- a/src/assets/Components/weaher.css
+++ b/src/assets/Components/weaher.css
@@ -78,7 +78,8 @@ font-size: 16px;
 }
 @media(max-width:800px){
     .Weather{
-        width: 400px;
+        width: 80%;
+        height: 80%;
     }
     .location{
         font-size: 30px;
