--- a/src/assets/Components/weaher.css
+++ b/src/assets/Components/weaher.css
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    max-width: 500px;
+    max-width: auto;
 }
 .dontkn{
     display: flex;
@@ -78,7 +78,7 @@ font-size: 16px;
 }
 @media(max-width:800px){
     .Weather{
-        width: 350px;
+        width: auto;
     }
     .location{
         font-size: 30px;
